--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "@types/express": "^4.17.11",
     "@types/hbs": "^4.0.1",
     "@types/node": "^14.14.37",
-    "@types/typescript": "^2.0.0",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.4"
+    "@types/typescript": "^2.0.0"
   },
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "hbs": "^4.1.1"
+    "hbs": "^4.1.1",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4"
   }
 }
