Se agrega config para typescript

--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "06-webserver",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/app.js",
   "scripts": {
-    "start": "ts-node app.ts"
+    "build": "tsc",
+    "start": "node dist/app.js"
   },
   "keywords": [],
   "author": "",
