--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "dist/app.js",
   "scripts": {
+    "start": "node dist/app.js",
     "build": "tsc",
-    "start": "node dist/app.js"
+    "serve": "nodemon src/app.ts"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,7 @@
     "@types/hbs": "^4.0.1",
     "@types/node": "^14.14.37",
     "@types/typescript": "^2.0.0",
+    "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
